# netsentinel

./: .gitignore  README.md
.vercel/: repo.json
bridge/: main.py  netsentinel.db  requirements.txt
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx
demo/: exfiltration.pcap  generate_pcaps.py  normal_traffic.pcap  port_scan.pcap  sql_injection.pcap
engine/: CMakeLists.txt
engine/include/: capture.h  dissector.h  profiler.h  types.h
engine/src/: capture.cpp  dissector.cpp  main.cpp  profiler.cpp
